H-P Ulven changing plugin system 26.05.08: Loading plugin over the net
git-svn-id: https://dev.geogebra.org/svn/trunk/geogebra@959 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e